add courseId to content and some refactoring